--- a/client/src/components/MessageList/Message/Message.css
+++ b/client/src/components/MessageList/Message/Message.css
@@ -1,7 +1,81 @@
-.Message:nth-child(odd) {
-    background-color: whitesmoke;
-}
+/*.Message:nth-child(odd) {*/
+/*background-color: lightskyblue;*/
+/*}*/
 
 .Message {
-    padding: 0.5rem;
+    margin: 1px 0;
+    padding: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    transition: transform 0.3s ease-out;
+    /*flex-direction: column;*/
+    /*position: relative;*/
+}
+
+.MessageOther {
+    margin: 1px 0;
+    padding: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    /*flex-direction: row-reverse;*/
+    /*flex-direction: column;*/
+    /*position: relative;*/
+}
+
+.MessageUser {
+    /*display: inline-block;*/
+    flex: 1;
+    margin-right: 8px;
+    text-align: center;
+}
+
+.MessageOtherUser {
+    flex: 1;
+    margin-left: 8px;
+    text-align: center;
+}
+
+.MessageText {
+    flex: 2;
+    padding: 0.5rem 1rem;
+    border-radius: 20px 15px 15px 5px;
+    background: lightskyblue;
+    box-shadow: 5px 5px 5px grey;
+}
+
+.MessageOtherText {
+    flex: 2;
+    padding: 0.5rem 1rem;
+    border-radius: 15px 20px 5px 15px;
+    background: #dadada;
+    box-shadow: -5px 5px 5px grey;
+    text-align: end;
+}
+
+.MessageTime {
+    flex: 1;
+    text-align: center;
+    font-size: small;
+    color: darkgrey;
+    margin: 0 auto;
+}
+
+@media (min-width: 500px) {
+    .MessageText {
+        flex: 8;
+    }
+
+    .MessageOtherText {
+        flex: 8;
+    }
+
+    .MessageTime {
+        flex: 1;
+        text-align: center;
+        font-size: small;
+        color: darkgrey;
+        margin: 0 5px;
+    }
 }
