--- a/client/src/components/MessageList/MessageList.css
+++ b/client/src/components/MessageList/MessageList.css
@@ -4,6 +4,6 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 75vw;
-    padding: 20px;
+    padding: 0.5rem;
     overflow-y: scroll;
 }
