--- a/client/src/components/MessageList/MessageList.css
+++ b/client/src/components/MessageList/MessageList.css
@@ -5,5 +5,18 @@
     justify-content: flex-start;
     width: 60vw;
     padding: 0.5rem;
-    overflow-y: scroll;
+    overflow-y: auto;
+}
+
+.MessageList::-webkit-scrollbar {
+    width: 1em;
+}
+
+.MessageList::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.MessageList::-webkit-scrollbar-thumb {
+    background-color: slategrey;
+    outline: 1px solid slategrey;
 }
